# dnaapler

./: .flake8  .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  MANIFEST.in  README.md  dnaapler  environment.yaml  environment.yml  justfile  mkdocs.yml  pyproject.toml  requirements.txt  run_dnaapler.ipynb  setup.py
.github/workflows/: ci.yaml  release.yaml
db/: dnaA.fasta  dnaA_db.phr  dnaA_db.pin  dnaA_db.pjs  dnaA_db.psq  dnaA_db.pto  repA.faa  repA_db.pin  terL_db.phr  terL_db.pin  terL_db.pjs
dnaapler/: __main__.py  constants.py  dnaapler.py  external_tools.py  processes.py  processing.py  util.py  validation.py
docs/: citation.md  example.md  index.md  install.md  output.md  requirements.txt  run.md
paper/: paper.bib  paper.md
src/: CITATION  __main__.py  constants.py  util.py  validation.py
src/dnaapler/: __init__.py
src/dnaapler/db/: README.md  all_db.index  all_db.lookup  all_db.phr  all_db.pin  all_db.pjs  all_db.pto  all_db.source  all_db_h  all_db_h.index  cog1474.fasta  cog1474_db  cog1474_db.index  cog1474_db.lookup  cog1474_db.phr  cog1474_db.pin  cog1474_db.pjs  cog1474_db.psq  cog1474_db.pto  cog1474_db.source  cog1474_db_h  cog1474_db_h.index  dnaA.faa  dnaA.faa.pin  dnaA.faa.pjs  dnaA.faa.psq  dnaA_db  dnaA_db.index  dnaA_db.lookup  dnaA_db.phr  dnaA_db.pin  dnaA_db.pjs  dnaA_db.pto  dnaA_db.source  dnaA_db_h  dnaA_db_h.index  dnaA_repA.faa  dnaA_repA_db  dnaA_repA_db.index  dnaA_repA_db.lookup  (+49 more)
src/dnaapler/tests/helpers/logs/: python_bf95c699e4089695c4540a121d356e28ed2abda25716ac4730d2a13e753a71d3.err
src/dnaapler/utils/: CITATION  VERSION  all.py  bulk.py  cds_methods.py  external_tools.py  gfa.py  mystery.py  processing.py  util.py  validation.py
tests/: dnaapler_test.py  test_dnaapler.py  test_overall.py  test_process_ignore_input.py
tests/helpers/: run_test.py
tests/helpers/logs/: python3.11_19323579d556de616d8dfdc79dffbd1ed06d8c6cc5db58316e96284791a08c19.err  python3.8_694abdfd28ac7d1fa30b2376e0ba76f760d6c8a53c4cfbcd321207f8f107073d.err
tests/test_data/: NC_007458_dnaapler_MMseqs2_output.txt  SAOMS1_blast_output_already_oriented.txt  SAOMS1_blast_output_correct.txt  SAOMS1_blast_output_no_one.txt  SAOMS1_blast_output_wrong_start_codon.txt  SAOMS1_reoriented.fasta  duplicate_names.fna  duplicate_names.gfa  fake_custom.faa  fake_reoriented.fasta  nucl_test.fna  nucl_test_circular.gfa  nucl_test_linear.gfa
tests/test_data/contig_ends/: C333_sa3int_phage.fasta  CP001742.1_archaea.fasta  plasmid.fasta
tests/test_data/overall_inputs/: C333_sa3int_phage.fasta  CP001742.1_archaea.fasta  PP04977_pilon_subset.fasta  SAOMS1.fasta  all_reorient_and_no_reorient.fasta  all_test.fasta  all_test.gfa  all_test_autocomplete.fasta  bulk_archaea.fasta  bulk_phage.fasta  bulk_plasmid.fasta  chromosome.fasta  chromosome_top_hit_no_start_codon.fasta  dupe_header.fasta  fake_reoriented_NC_007458.fasta  ignore.txt  inexact_overlap.gfa  no_circular.gfa  no_hit_plasmid.fasta  plasmid.fasta  plasmid_top_hit_no_start_codon.fasta
(+3 files in other folders)
