[tool.poetry]
name = "dnaapler"
version = "0.7.0" # change VERSION too
description = "Reorients assembled microbial sequences"
authors = ["George Bouras <george.bouras@adelaide.edu.au>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gbouras13/dnaapler"
repository = "https://github.com/gbouras13/dnaapler"
keywords = ["microbial", "bioinformatics"]
include = [
    "HISTORY.md"
]

[tool.poetry.scripts]
dnaapler = 'dnaapler:main'

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = ">=8.0.0"
loguru = ">=0.5.3"
pyyaml = ">=6.0"
pandas = ">=1.4.2"
biopython = ">=1.76"
pyrodigal = ">=3.0.0"


[tool.poetry.dev-dependencies]
black = ">=22.3.0"
isort = ">=5.10.1"
pytest = ">=6.2.5"
pytest-cov = ">=3.0.0"
flake8 = ">=3.0.1"

[[tool.poetry.source]]
name = "pypi-test"
url = "https://test.pypi.org/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
